clusters/base/kur8/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kur8
  name: kur8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kur8
  template:
    metadata:
      labels:
        app: kur8
    spec:
      containers:
        - name: kur8
          image: kur8/dashboard:latest
          ports:
            - containerPort: 3068
