clusters/base/kur8/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kur8
  namespace: kur8
spec:
  ports:
    - name: kur8
      port: 3068
      targetPort: 3068
  selector:
    app: kur8
