clusters/base/kur8/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kur8
  namespace: kur8
spec:
  ingressClassName: nginx
  rules:
    - host: host.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kur8
                port:
                  number: 3000
